# qkerasV3

./: .gitignore  .readthedocs.yml  CHANGELOG  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  examples.md  index.rst  installation.md  notebooks.md  quickstart.md  requirements.txt  tutorials.md
docs/source/api/: index.rst
docs/source/examples/: index.md  top_level.md
examples/: example_act.py  example_adaptive.py  example_b2t.py  example_cifar10_po2.py  example_keras_to_qkeras.py  example_mnist.py  example_mnist_ae.py  example_mnist_b2t.py  example_mnist_bn.py  example_mnist_po2.py  example_mnist_prune.py  example_qdense.py  example_qoctave.py  example_ternary.py
experimental/lo/: __init__.py  compress.py  conv2d.py  dense.py  generate_rf_code.py  optimizer.py  receptive.py  utils.py
experimental/lo/random_forest/: __init__.py  gen_random_tree.py  parser.py  random_forest.py  random_tree.py  utils.py
experimental/lo/table/: __init__.py  parser.py  utils.py
notebook/: AutoQKeras.ipynb  CodebookQuantization.ipynb  QKerasTutorial.ipynb  QRNNTutorial.ipynb
qkeras/: __init__.py  b2t.py  base_quantizer.py  bn_folding_utils.py  callbacks.py  codebook.py  estimate.py  qconv2d_batchnorm.py  qconvolutional.py  qdense_batchnorm-new.py  qdense_batchnorm.py  qdepthwise_conv2d_transpose.py  qdepthwiseconv2d_batchnorm.py  qlayers.py  qmac.py  qnormalization-new.py  qnormalization.py  qoctave.py  qpooling.py  qrecurrent.py  qseparable_conv2d_transpose.py  quantizer_imports.py  quantizer_registry.py  quantizers.py  registry.py  safe_eval.py  utils.py
qkeras/autoqkeras/: __init__.py  autoqkeras_internal.py  quantization_config.py  utils.py
qkeras/autoqkeras/examples/run/: get_data.py  get_model.py  plot_history.py
qkeras/autoqkeras/examples/run/networks/: conv_block.py
qkeras/autoqkeras/forgiving_metrics/: forgiving_bits.py  forgiving_energy.py
qkeras/autoqkeras/tests/: test_forgiving_factor.py
qkeras/experimental/quantizers/: __init__.py  quantizers_po2.py
qkeras/qtools/: __init__.py  config_public.py  generate_layer_data_type_map.py  interface.py  qgraph.py  qtools_util.py  run_qtools.py  settings.py
qkeras/qtools/DnC/: divide_and_conquer.py  dnc_layer_cost_ace.py
qkeras/qtools/examples/: example_generate_json.py  example_get_energy.py
qkeras/qtools/qenergy/: qenergy.py
qkeras/qtools/quantized_operators/: __init__.py  accumulator_factory.py  accumulator_impl.py  adder_factory.py  adder_impl.py  divider_factory.py  divider_impl.py  fused_bn_factory.py  merge_factory.py  multiplier_factory.py  multiplier_impl.py  qbn_factory.py  quantizer_factory.py  quantizer_impl.py  subtractor_factory.py
qkerasV3/: __init__.py  base_quantizer.py  bn_folding_utils.py  callbacks.py  codebook.py  estimate.py  ops_portable.py  prunable_layer.py  qconv2d_batchnorm.py  qconvolutional.py  qdense_batchnorm.py  qdepthwise_conv2d_transpose.py  qdepthwiseconv2d_batchnorm.py  qlayers.py  qmac.py  qnormalization.py  qoctave.py  qpooling.py  qrecurrent.py  qseparable_conv2d_transpose.py  quantizer_imports.py  quantizers.py  safe_eval.py  utils.py
qkerasV3/autoqkeras/: autoqkeras_internal.py  utils.py
qkerasV3/autoqkeras/examples/run/: get_data.py  get_model.py  plot_history.py
qkerasV3/autoqkeras/examples/run/networks/: conv_block.py
qkerasV3/autoqkeras/forgiving_metrics/: __init__.py  forgiving_bits.py  forgiving_energy.py  forgiving_factor.py
qkerasV3/autoqkeras/tests/: test_forgiving_factor.py
qkerasV3/experimental/quantizers/: __init__.py  quantizers_po2.py
qkerasV3/qtools/: generate_layer_data_type_map.py  qgraph.py  qtools_util.py  run_qtools.py  settings.py
qkerasV3/qtools/DnC/: divide_and_conquer.py  dnc_layer_cost_ace.py
qkerasV3/qtools/examples/: example_generate_json.py  example_get_energy.py
qkerasV3/qtools/qenergy/: __init__.py  qenergy.py
qkerasV3/qtools/quantized_operators/: accumulator_factory.py  accumulator_impl.py  adder_factory.py  adder_impl.py  divider_factory.py  divider_impl.py  merge_factory.py  multiplier_impl.py  qbn_factory.py  quantizer_factory.py  quantizer_impl.py
tests/: api_test.py  automatic_conversion_test.py  autoqkeras_test.py  bn_folding_test.py  callbacks_test.py  codebook_test.py  leakyrelu_test.py  min_max_test.py  print_qstats_test.py  qactivation_test.py  qadaptiveactivation_test.py  qalpha_test.py  qconvolutional_test.py  qdepthwise_conv2d_transpose_test.py  qlayers_test.py  qmac_test.py  qnoise_test.py  qpooling_test.py  qrecurrent_test.py  qseparable_conv2d_transpose_test.py  qtools_model_test.py  qtools_util_test.py  quantizer_impl_test.py  quantizer_registry_test.py  range_test.py  registry_test.py  safe_eval_test.py  test_hls4ml_compile.py  test_hls4ml_compile_qconv1d.py  test_hls4ml_compile_qdense.py  test_thermometer.py  utils_test.py
tutorials/: QKerasActivations.ipynb  QKerasAutoencoder.ipynb  QKerasCNN.ipynb  QKerasCodebook.ipynb  QKerasHardwareModeling.ipynb  QKerasKerasConversion.ipynb  QKerasProfiling.ipynb  QKerasRNN.ipynb
