[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qkeras-v3"
version = "1.0.0"
description = "Quantization package for KerasV3"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Niklas Firle", email = "nfirle@students.uni-mainz.de" },
    { name = "Marius Snella Köppel ", email = "mkoepp@phys.ethz.ch" },
    { name = "Mattia Cerrato", email = "mcerrato@uni-mainz.de" },
]
maintainers = [
    { name = "Niklas Firle", email = "nfirle@students.uni-mainz.de" },
    { name = "Marius Snella Köppel ", email = "mkoepp@phys.ethz.ch" },
    { name = "Mattia Cerrato", email = "mcerrato@uni-mainz.de" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pyparser",
    "setuptools",
    "tensorflow-model-optimization",
    "networkx",
    "scikit-learn",
    "tqdm",
    "ruff",
    "jax",
    "torch",
    "tensorflow",
    "keras-tuner"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/makoeppel/qkerasV3"
Repository = "https://github.com/makoeppel/qkerasV3"
Issues = "https://github.com/makoeppel/qkerasV3"

[tool.setuptools]
packages = { find = { where = ["."] } }
license-files = ["LICENSE", "NOTICE"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle (errors)
    "W",   # pycodestyle (warnings)
    "UP",  # pyupgrade
    "I",   # isort
    "PL",  # Pylint
]
ignore = []
line-length = 88
target-version = "py310"
