[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qkeras-v3"
version = "1.0.0"
description = "Quantization package for KerasV3"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Niklas Firle", email = "nfirle@students.uni-mainz.de" },
    { name = "Marius Snella Köppel ", email = "mkoepp@phys.ethz.ch" },
    { name = "Mattia Cerrato", email = "mcerrato@uni-mainz.de" },
]
maintainers = [
    { name = "Niklas Firle", email = "nfirle@students.uni-mainz.de" },
    { name = "Marius Snella Köppel ", email = "mkoepp@phys.ethz.ch" },
    { name = "Mattia Cerrato", email = "mcerrato@uni-mainz.de" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy~=1.23",
    "scipy>=1.16.3",
    "pyparser>=1.0",
    "setuptools>=61.0",
    "networkx>=3.5",
    "scikit-learn>=1.7.2",
    "keras>=3.12.0",
    "tqdm>=4.67.1",
    "ruff>=0.14.4",
    "tensorflow",
    "tensorflow-model-optimization>=0.8.0",
    "keras-tuner",
    "tf_keras",
    #"torch",
    #"jax"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/makoeppel/qkerasV3"
Repository = "https://github.com/makoeppel/qkerasV3"
Issues = "https://github.com/makoeppel/qkerasV3"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle (errors)
    "W",   # pycodestyle (warnings)
    "UP",  # pyupgrade
    "I",   # isort
    "PL",  # Pylint
]
ignore = []
line-length = 88
indent-width = 4
target-version = "py310"
