[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qkeras-v3"
version = "1.1.0"
description = "Quantization package for KerasV3"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Niklas Firle", email = "nfirle@students.uni-mainz.de" },
    { name = "Marius Snella Köppel ", email = "mkoepp@phys.ethz.ch" },
    { name = "Mattia Cerrato", email = "mcerrato@uni-mainz.de" },
]
maintainers = [
    { name = "Niklas Firle", email = "nfirle@students.uni-mainz.de" },
    { name = "Marius Snella Köppel ", email = "mkoepp@phys.ethz.ch" },
    { name = "Mattia Cerrato", email = "mcerrato@uni-mainz.de" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pyparser",
    "setuptools",
    "networkx",
    "scikit-learn",
    "keras",
    "tqdm",
    "ruff",
    "pyparsing",
    "tensorflow",
    "tensorflow-model-optimization",
    #"torch",
    #"jax"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://qkerasv3.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/fastmachinelearning/qkerasV3"
Issues = "https://github.com/fastmachinelearning/qkerasV3"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle (errors)
    "W",   # pycodestyle (warnings)
    "UP",  # pyupgrade
    "I",   # isort
    "PL",  # Pylint
]
ignore = []
line-length = 88
indent-width = 4
target-version = "py310"
