[metadata]
name = qkerasV3
version = 1.0.0
author = Google
author_email = qkeras-team@google.com
description = A quantization extension to Keras that provides drop-in layer replacements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/google/qkeras
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
where = qkerasV3

[aliases]
test=pytest